samples/_failures_safe/1761796705_a37a1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0f1696b.c: In function ‘main’:
./samples/SAFE/__tmp_a0f1696b.c:153:28: error: missing terminating " character
  153 |                     printf("Matrix
      |                            ^~~~~~~
./samples/SAFE/__tmp_a0f1696b.c:153:21: error: expected expression at end of input
  153 |                     printf("Matrix
      |                     ^~~~~~
./samples/SAFE/__tmp_a0f1696b.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0f1696b.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0f1696b.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0f1696b.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a0f1696b.c:153:21: error: expected declaration or statement at end of input
